mutants.out.old/log/src__proto__client__mod.rs_line_218_col_9_012.log

*** src/proto/client/mod.rs:218:9: replace Client<BufStream<TokioStream>>::connect -> Result<Client<BufStream<TokioStream>>, Error> with Ok(Client::from_iter([BufStream::from(Default::default())]))

*** mutation diff:
--- src/proto/client/mod.rs
+++ replace Client<BufStream<TokioStream>>::connect -> Result<Client<BufStream<TokioStream>>, Error> with Ok(Client::from_iter([BufStream::from(Default::default())]))
@@ -210,19 +210,17 @@
     /// from (defaults to `FAKTORY_URL`), and then that environment variable is read to get the
     /// server address. If the latter environment variable is not defined, the connection will be
     /// made to
     ///
     /// ```text
     /// tcp://localhost:7419
     /// ```
     pub async fn connect(url: Option<&str>) -> Result<Client<BufStream<TokioStream>>, Error> {
-        let url = utils::parse_provided_or_from_env(url)?;
-        let stream = TokioStream::connect(utils::host_from_url(&url)).await?;
-        Self::connect_with(stream, url.password().map(|p| p.to_string())).await
+        Ok(Client::from_iter([BufStream::from(Default::default())])) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl<S> Client<S>
 where
     S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send,
 {
     async fn init(&mut self) -> Result<(), Error> {


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0599]: no function or associated item named `from_iter` found for struct `Client` in the current scope
   --> src/proto/client/mod.rs:218:20
    |
149 | pub struct Client<S: AsyncBufReadExt + AsyncWriteExt + Send + Unpin> {
    | -------------------------------------------------------------------- function or associated item `from_iter` not found for this struct
...
218 |         Ok(Client::from_iter([BufStream::from(Default::default())])) /* ~ changed by cargo-mutants ~ */
    |                    ^^^^^^^^^ function or associated item not found in `Client<_>`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `from_iter`, perhaps you need to implement it:
            candidate #1: `FromIterator`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
